# notes

./: .gitattributes  .gitignore  COPYING  README.org
angular-university/angular-for-beginners/: angular-for-beginners.md
books/functional-programming-for-mortals/: build.sbt  functional-programming-for-mortals.org
books/get-programming-with-haskell/: .gitignore  get-programming-with-haskell.org
books/gopl/: gopl.org
books/the-definitive-guide-to-spring-batch/: the-definitive-guide-to-spring-batch.org
books/the-joy-of-kotlin/: the-joy-of-kotlin.org
bsd/introduction-to-freebsd-livelessons/: introduction-to-freebsd-livelessons.md
c/c-google-test/: .editorconfig  .gitignore  CMakeLists.txt  example.c  example.h
c/c-google-test/test/: CMakeLists.txt
c/c-sandbox/: CMakeLists.txt  main.c
c/tpli_sandbox/: CMakeLists.txt  main.c
cinema-4d/cinema-4d-journey/: cinema-4d-journey.md
courses/adobe-premiere-pro-cc-for-beginners/: adobe-premiere-pro-cc-for-beginners.org
courses/learn-flutter-dart-to-build-ios-android-apps/: learn-flutter-dart-to-build-ios-android-apps.org
courses/mongodb-the-complete-developers-guide/: mongodb-the-complete-developers-guide.org
courses/reactive-java-9/: reactive-java-9.org
dart-in-action/: dart-in-action.md
haskell/: haskell-project-based-approach.md
kotlin-bnr/: kotlin-bnr.md
notebooks/: polyglot-notebook.ipynb
python-ds-ml-bootcamp/: python-ds-ml-bootcamp.ipynb  python-ds-ml-bootcamp.md
quarkus-sandbox/: .editorconfig  .gitignore  README.md  build.gradle  gradle.properties  pom.xml  settings.gradle
(+218 files in other folders)
